--- a/index.html
+++ b/index.html
@@ -3,9 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hue Festival 2025</title>
+    <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div class="section-2">
+        <div class="information-container">
+            <div class="child-section-2">
+                <h1 style="width: auto; margin: 0 auto;">Giới thiệu</h1>
+                <hr class="text--decor">
+            </div>
+            <div class="child-section-2">
+                <div class="text-wrapper">
+                    <span class="intro">Festival Huế 2025, kết hợp với Năm Du lịch Quốc gia, sẽ diễn ra với nhiều hoạt động đặc sắc trải dài trong năm, bao gồm các lễ hội mùa Xuân, Hạ, Thu và Đông. 
+                        Lễ khai mạc Năm Du lịch Quốc gia - Festival Huế 2025 dự kiến diễn ra vào tối 25/3/2025, tại sân khấu bên bờ sông Hương, trước trường Quốc Học, với chương trình nghệ thuật 
+                        "Lời tự tình dòng sông" và bắn pháo hoa kỷ niệm 50 năm Ngày Giải phóng Thừa Thiên Huế.</span>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-container">
+            <div class="carousel-track">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+        </div>
+    </div>
     
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
