--- a/index.html
+++ b/index.html
@@ -2,87 +2,139 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hue Festival 2025</title>
-    <link rel="stylesheet" href="./assets/css/base.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Title</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="section-2">
-        <div class="information-container">
-            <div class="child-section-2">
-                <h1 style="width: auto; margin: 0 auto;">Giới thiệu</h1>
-                <hr class="text--decor">
+<div class="turtle-container">
+
+    <div class="menu">
+        <img src="assets/img/Background/bg-header-real.png" alt="Left Decor" class="logo-left">
+        <img src="assets/img/Logo/logo-festival.png" alt="Festival Logo" class="logo">
+        <a href="#">Giới thiệu</a>
+        <a href="#">Sự kiện</a>
+        <a href="#">Làng nghề</a>
+        <a href="#">Ẩm thực</a>
+        <a href="#">Nghệ thuật</a>
+        <a href="#">Địa danh</a>
+        <img src="assets/img/Background/bg-header.png" alt="Left Decor" class="logo-right">
+    </div>
+
+    <div class="banner"></div>
+    <div class="introduction">
+        <h1 class="title">Giới thiệu</h1>
+        <div class="line"></div>
+        <p class="content">Festival Huế 2025, kết hợp với Năm Du lịch Quốc gia,
+            sẽ diễn ra với nhiều hoạt động đặc sắc trải dài trong năm, bao gồm các lễ hội
+            mùa Xuân, Hạ, Thu và Đông. Lễ khai mạc Năm Du lịch Quốc gia - Festival Huế 2025
+            dự kiến diễn ra vào tối 25/3/2025, tại sân khấu bên bờ sông Hương,
+            trước trường Quốc Học, với chương trình nghệ thuật "Lời tự tình dòng sông" và
+            bắn pháo hoa kỷ niệm 50 năm Ngày Giải phóng Thừa Thiên Huế.</p>
+        <div class="intro-img-wrapper">
+            <div class="intro-img-slide">
+                <img src="assets/img/Gioi_Thieu/duong-pho.jpg" alt="">
+                <img src="assets/img/Gioi_Thieu/festival.png" alt="">
+                <img src="assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img src="assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img src="assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
+                <img src="assets/img/Gioi_Thieu/duong-pho.jpg" alt="">
+                <img src="assets/img/Gioi_Thieu/festival.png" alt="">
+                <img src="assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
+                <img src="assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
+                <img src="assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
             </div>
-            <div class="child-section-2">
-                <div class="text-wrapper">
-                    <span class="intro">Festival Huế 2025, kết hợp với Năm Du lịch Quốc gia, sẽ diễn ra với nhiều hoạt động đặc sắc trải dài trong năm, bao gồm các lễ hội mùa Xuân, Hạ, Thu và Đông. 
-                        Lễ khai mạc Năm Du lịch Quốc gia - Festival Huế 2025 dự kiến diễn ra vào tối 25/3/2025, tại sân khấu bên bờ sông Hương, trước trường Quốc Học, với chương trình nghệ thuật 
-                        "Lời tự tình dòng sông" và bắn pháo hoa kỷ niệm 50 năm Ngày Giải phóng Thừa Thiên Huế.</span>
+        </div>
+    </div>
+    <div class="event-schedule">
+        <div class="bg-only"></div>
+        <h1 class="title">lịch trình sự kiện</h1>
+        <div class="line"></div>
+        <div class="event-body">
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h4>Festival Mùa Xuân Huế 2025</h4>
+                    <p>Tháng 1 - Tháng 3/2025</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Festival Mùa Hạ Huế 2025</h4>
+                    <p>Tháng 4- Tháng 6/2025</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Festival Mùa Thu Huế 2025</h4>
+                    <p>Tháng 7 - Tháng 9/2025</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Festival Mùa Đông Huế 2025</h4>
+                    <p>Tháng 10 - Tháng 12/2025</p>
+                </div>
+            </div>
+            <div class="event-info">
+                <div class="event-detail">
+                    <h4>Công bố Festival Huế 2025 và Chương trình nghệ thuật “Huế ngày mới”</h4>
+                    <p>📅 01/01/2025</p>
+                    <p>📍 Ngọ Môn, Đại Nội Huế</p>
+                </div>
+                <div class="event-detail">
+                    <h4>Ngày hội Hoàng mai Huế lần thứ III năm 2025</h4>
+                    <p>📅 01/01/2025</p>
+                    <p>📍 Ngọ Môn, Đại Nội Huế</p>
+                </div>
+                <div class="event-detail">
+                    <h4>Chương trình Hương xưa bánh Tết</h4>
+                    <p>📅 01/01/2025</p>
+                    <p>📍 Ngọ Môn, Đại Nội Huế</p>
                 </div>
             </div>
         </div>
-        <div class="carousel-container">
-            <div class="carousel-track">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/l-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/festival.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl-1.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/le-hoi-hue.png" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/lgl.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/hoang-thanh.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/ao-dai-hue.jpg" alt="">
-                <img class="speed" src="./assets/img/Gioi_Thieu/khai-dinh-1.jpg" alt="">
+
+        <div class="color-buttons">
+            <div class="color-circle yellow"></div>
+            <div class="color-circle red"></div>
+            <div class="color-circle blue"></div>
+            <div class="color-circle black"></div>
+        </div>
+
+    </div>
+    <div class="traditional-village">
+        <h1 class="title">LÀNG NGHỀ TRUYỀN THỐNG</h1>
+        <div class="line"></div>
+        <div class="village-item">
+            <div class="village-content">
+                <div class="village-name">LÀNG HƯƠNG THUỶ XUÂN</div>
+                <p class="village-info">Làng hương Thủy Xuân ở Huế là làng nghề truyền thống với hơn 100 năm tuổi,
+                    nổi tiếng với nghề làm hương thủ công từ nguyên liệu tự nhiên. Nơi đây không chỉ sản xuất hương
+                    mà còn là điểm du lịch thu hút với sắc màu rực rỡ và không gian yên bình.</p>
+
+                <button class="more-info">Xem thêm</button>
+            </div>
+            <div class="village-img" style="background-image: url('assets/img/Lang-nghe/lang-huong-thuy-xuan.jpg')"></div>
+        </div>
+        <div class="village-item-reverse">
+            <div class="village-content">
+                <div class="village-name">LÀNG NÓN TÂY HỒ</div>
+                <p class="village-info">Làng nón Tây Hồ là “quê hương nón bài thơ” – nơi chiếc nón truyền thống Huế
+                    được ép thơ từ khoảng cuối thập niên 1950–1960. Với quy trình khéo léo khoảng 15 công đoạn từ
+                    chọn lá, chuốt tre, chằm lá đến phơi nắng, nón Tây Hồ tinh mảnh, nhẹ, màu nhã và chứa đựng hồn thơ xứ Huế.
+                </p>
+                <button class="more-info">Xem thêm</button>
+            </div>
+            <div class="village-img" style="background-image: url('assets/img/Lang-nghe/du-lich-Lang-non-tay-ho-hue-mytour-3.jpg')"></div>
+        </div>
+        <div class="village-item">
+            <div class="village-content">
+                <div class="village-name">LÀNG QUẠT BAO VINH</div>
+                <p class="village-info">Nằm bên dòng sông Hương thơ mộng, Phố cổ Bao Vinh (Huế) là điểm giao thoa
+                    của lịch sử và văn hóa. Giữa những ngôi nhà cổ kính, nghề làm quạt giấy truyền thống vẫn
+                    âm thầm được duy trì. Những chiếc quạt không chỉ là vật dụng mà còn mang giá trị nghệ thuật
+                    tinh tế. Tất cả được kết tinh từ đôi bàn tay khéo léo của người thợ Huế.</p>
+                <button class="more-info">Xem thêm</button>
+            </div>
+            <div class="village-img"  style="background-image: url('assets/img/Lang-nghe/Khamphahue-NgheQuatGiay_LeVanMinh_25_12_2024_16_47_14_885_CH.jpg')"></div>
         </div>
     </div>
-    
-
-    <script src="./assets/js/script.js"></script>
+</div>
 </body>
 </html>
