--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="food-grid" style="width: 860px;">
                     <div class="food-card active">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="BÚN BÒ">
                         <div class="food-infor">
                             <h3>BÚN BÒ</h3>
                             <span>BUN BO HUE</span>
@@ -123,26 +123,26 @@
                     </div>
                     <div class="food-card active">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-beo-2.jpg" alt="BÁNH BÈO">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH BÈO</h3>
+                            <span>BANH BEO</span>
                         </div>
                     </div>
                     <div class="food-card active">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/com-am-phu.jpg" alt="CƠM ÂM PHỦ">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>CƠM ÂM PHỦ</h3>
+                            <span>AM PHU FRIED RICE</span>
                         </div>
                     </div>
                     <div class="food-card active">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="BÁNH CANH NAM PHỔ">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH CANH NAM PHỔ</h3>
+                            <span>BANH CANH NAM PHO</span>
                         </div>
                     </div>
                 </div>
@@ -151,130 +151,104 @@
                 <div class="food-grids">
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-xeo.jpg" alt="BÁNH KHOÁI">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH KHOÁI</h3>
+                            <span>HUE CRISPY PANCAKE</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-ep.jpg" alt="BÁNH ÉP">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH ÉP</h3>
+                            <span>HUE PRESSED CAKE</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/com-hen-hue.jpg" alt="CƠM HẾN">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="food-grids">
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>CƠM HẾN</h3>
+                            <span>HUE STEAMED RICE WITH BABY CLAMS</span>
                         </div>
                     </div>
                 </div>
                 <div class="food-grids">
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/nem-lui.jpg" alt="NEM LỤI">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>NEM LỤI</h3>
+                            <span>HUE LEMONGRASS PORK SKEWERS</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/nem-chua.jpg" alt="NEM CHUA">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>NEM CHUA</h3>
+                            <span>HUE FERMENTED PORK</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/Tre-tron.jpg" alt="TRÉ TRỘN">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="food-grids">
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
-                        </div>
-                    </div>
-                    <div class="food-card">
-                        <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
-                        <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>TRÉ TRỘN</h3>
+                            <span>Hue Tre</span>
                         </div>
                     </div>
                 </div>
                 <div class="food-grids">
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-nam.jpg" alt="BÁNH NẬM">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH NẬM</h3>
+                            <span>Hue flat rice dumplings</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-loc.png" alt="BÁNH LỌC">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH LỌC</h3>
+                            <span>Hue Tapioca Dumplings</span>
                         </div>
                     </div>
                     <div class="food-card">
                         <div class="ribbon">MÓN NGON HUẾ</div>
-                        <img src="./assets/img/Am-thuc/bun-bo-hue.jpg" alt="Bún bò">
+                        <img src="./assets/img/Am-thuc/banh-ram-it.jpg" alt="BÁNH RAM ÍT">
                         <div class="food-infor">
-                            <h3>BÚN BÒ</h3>
-                            <span>BUN BO HUE</span>
+                            <h3>BÁNH RAM ÍT</h3>
+                            <span>Fried Sticky Rice Dumplings</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="food-grids">
+                    <div class="food-card">
+                        <div class="ribbon">MÓN NGON HUẾ</div>
+                        <img src="./assets/img/Am-thuc/tom-chua.jpg" alt="TÔM CHUA">
+                        <div class="food-infor">
+                            <h3>TÔM CHUA</h3>
+                            <span>Hue Sour Shrimp</span>
+                        </div>
+                    </div>
+                    <div class="food-card">
+                        <div class="ribbon">MÓN NGON HUẾ</div>
+                        <img src="./assets/img/Am-thuc/thumb_Khamphahue-me-xung-hue.jpg" alt="KẸO MÈ XỬNG">
+                        <div class="food-infor">
+                            <h3>KẸO MÈ XỬNG</h3>
+                            <span>Chewy Sesame Candy</span>
+                        </div>
+                    </div>
+                    <div class="food-card">
+                        <div class="ribbon">MÓN NGON HUẾ</div>
+                        <img src="./assets/img/Am-thuc/hen-xuc-banh-trang.webp" alt="HẾN XÚC BÁNH TRÁNG">
+                        <div class="food-infor">
+                            <h3>HẾN XÚC BÁNH TRÁNG</h3>
+                            <span>Baby clam with rice cracker</span>
                         </div>
                     </div>
                 </div>
