--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </div>
                 </div>
             </div>
-            <div class="btn" style="transform: translateX(-108px);">
+            <div class="btn">
                 <a class="btn-more bg-red-corners">Xem thêm</a>
             </div>
         </div>
