--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <!-- link font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
-
-
     <!-- link bootstrap -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> -->
 </head>
@@ -23,14 +21,15 @@
     <div class="dia-diem-du-lich ">
         <div class="map">
             <div class="list-control-map">
-                    <i class="fas fa-info icon-info"></i>
-                    <!-- <i class="fas fa-image icon-images"></i> -->
+                <i class="fas fa-info icon-info"></i>
+                <!-- <i class="fas fa-image icon-images"></i> -->
             </div>
             <div class="map-info">
                 <div class="map-title">
                     <h2>Đại Nội Huế</h2>
                     <div class="control-info">x</div>
                 </div>
+                <h4 class="map-address">Địa chỉ: 23-25 Lê Huân, Thuận Thành, Thành phố Huế, Thừa Thiên Huế</h4>
                 <p>Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
                     Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
                     Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
@@ -202,58 +201,75 @@
         // click vào icon location để thay đổi thông tin info
 
         const locationList = [
-        {
-            title: 'Đại Nội Huế',
-            content: `Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
-                    Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
-                    Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
-                    Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.`
-                
-        }
-        , {
-            title: 'Lăng vua Tự Đức',
-            content: `Lăng vua Tự Đức là một trong những lăng tẩm nổi tiếng của triều Nguyễn, nằm ở ngoại ô thành phố Huế.
-                    Lăng được xây dựng từ năm 1864 và hoàn thành vào năm 1867, là nơi an nghỉ của vua Tự Đức và hoàng hậu.
-                    Kiến trúc lăng tẩm mang đậm phong cách cung đình với nhiều công trình kiến trúc độc đáo.`
-        }, {
-            title: 'Cầu ngói Thanh Toàn',
-            content: `Cầu ngói Thanh Toàn là một trong những cây cầu cổ kính và đẹp nhất ở Huế, được xây dựng vào thế kỷ 18.
-                    Cầu có kiến trúc độc đáo với mái ngói cong vút, nằm bắc qua một con kênh nhỏ, tạo nên khung cảnh thơ mộng.
-                    Đây là điểm đến yêu thích của du khách khi đến Huế.`
-        }, {
-            title: 'Lăng vua Gia Long',
-            content: `Lăng vua Gia Long là lăng tẩm đầu tiên của triều Nguyễn, nằm ở ngoại ô thành phố Huế.
-                    Lăng được xây dựng từ năm 1814 và hoàn thành vào năm 1820, là nơi an nghỉ của vua Gia Long - vị vua sáng lập triều Nguyễn.
-                    Kiến trúc lăng tẩm mang đậm phong cách cung đình với nhiều công trình kiến trúc độc đáo.`
-        }, {
-            title: 'Làng cổ Phước Tích',
-            content: `Làng cổ Phước Tích là một trong những làng cổ truyền thống của Việt Nam, nằm cách trung tâm thành phố Huế khoảng 30km về phía Tây.
-                    Làng có lịch sử hơn 500 năm, nổi tiếng với những ngôi nhà cổ kính, kiến trúc độc đáo và nghề thủ công truyền thống.
-                    Đây là điểm đến yêu thích của du khách khi muốn tìm hiểu về văn hóa và lịch sử của vùng đất Cố đô.`
-        }, {
-            title: 'Đồi Thiên An',
-            content: `Đồi Thiên An là một trong những địa điểm du lịch nổi tiếng ở Huế, nằm cách trung tâm thành phố khoảng 7km về phía Tây Nam.
-                    Đồi có độ cao khoảng 200m so với mực nước biển, từ đỉnh đồi có thể nhìn thấy toàn cảnh thành phố Huế và dòng sông Hương thơ mộng.
-                    Đồi Thiên An còn được biết đến với những cánh rừng thông xanh mướt, tạo nên khung cảnh thơ mộng và yên bình.`
-        }, {
-            title: 'Cầu Trường Tiền',
-            content: `Cầu Trường Tiền là cây cầu nổi tiếng nhất ở Huế, bắc qua sông Hương.
-                    Cầu được xây dựng vào năm 1899 và hoàn thành vào năm 1904, là biểu tượng của thành phố Huế.
-                    Cầu có kiến trúc độc đáo với 6 nhịp, mỗi nhịp dài 68m, tạo nên khung cảnh thơ mộng và lãng mạn.`
-        }, {
-            title: 'Chùa Thiên Mụ',
-            content: `Chùa Thiên Mụ là một trong những ngôi chùa cổ kính và nổi tiếng nhất ở Huế, nằm trên đồi Hà Khê bên bờ sông Hương.
-                    Chùa được xây dựng vào năm 1601, là nơi thờ Phật và cũng là nơi lưu giữ nhiều di sản văn hóa quý giá.
-                    Chùa có kiến trúc độc đáo với tháp Phước Duyên cao 21m, là biểu tượng của chùa Thiên Mụ.`
-        }
+            {
+                title: 'Đại Nội Huế',
+                content: `Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
+                Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
+                Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
+                Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.`,
+                address: '23-25 Lê Huân, Thuận Thành, Thành phố Huế, Thừa Thiên Huế'
+            },
+            {
+                title: 'Lăng vua Tự Đức',
+                content: `Lăng vua Tự Đức là một trong những lăng tẩm nổi tiếng của triều Nguyễn, nằm ở ngoại ô thành phố Huế.
+                Lăng được xây dựng từ năm 1864 và hoàn thành vào năm 1867, là nơi an nghỉ của vua Tự Đức và hoàng hậu.
+                Kiến trúc lăng tẩm mang đậm phong cách cung đình với nhiều công trình kiến trúc độc đáo.`,
+                address: 'Thôn Thượng Ba, Xã Thủy Xuân, Thành phố Huế, Thừa Thiên Huế'
+            },
+            {
+                title: 'Cầu ngói Thanh Toàn',
+                content: `Cầu ngói Thanh Toàn là một trong những cây cầu cổ kính và đẹp nhất ở Huế, được xây dựng vào thế kỷ 18.
+                Cầu có kiến trúc độc đáo với mái ngói cong vút, nằm bắc qua một con kênh nhỏ, tạo nên khung cảnh thơ mộng.
+                Đây là điểm đến yêu thích của du khách khi đến Huế.`,
+                address: 'Thôn Thanh Thủy Chánh, Xã Thủy Thanh, Thị xã Hương Thủy, Thừa Thiên Huế'
+            },
+            {
+                title: 'Lăng vua Gia Long',
+                content: `Lăng vua Gia Long là lăng tẩm đầu tiên của triều Nguyễn, nằm ở ngoại ô thành phố Huế.
+                Lăng được xây dựng từ năm 1814 và hoàn thành vào năm 1820, là nơi an nghỉ của vua Gia Long - vị vua sáng lập triều Nguyễn.
+                Kiến trúc lăng tẩm mang đậm phong cách cung đình với nhiều công trình kiến trúc độc đáo.`,
+                address: 'Xã Hương Thọ, Thị xã Hương Trà, Thừa Thiên Huế'
+            },
+            {
+                title: 'Làng cổ Phước Tích',
+                content: `Làng cổ Phước Tích là một trong những làng cổ truyền thống của Việt Nam, nằm cách trung tâm thành phố Huế khoảng 30km về phía Tây.
+                Làng có lịch sử hơn 500 năm, nổi tiếng với những ngôi nhà cổ kính, kiến trúc độc đáo và nghề thủ công truyền thống.
+                Đây là điểm đến yêu thích của du khách khi muốn tìm hiểu về văn hóa và lịch sử của vùng đất Cố đô.`,
+                address: 'Xã Phong Hòa, Huyện Phong Điền, Thừa Thiên Huế'
+            },
+            {
+                title: 'Đồi Thiên An',
+                content: `Đồi Thiên An là một trong những địa điểm du lịch nổi tiếng ở Huế, nằm cách trung tâm thành phố khoảng 7km về phía Tây Nam.
+                Đồi có độ cao khoảng 200m so với mực nước biển, từ đỉnh đồi có thể nhìn thấy toàn cảnh thành phố Huế và dòng sông Hương thơ mộng.
+                Đồi Thiên An còn được biết đến với những cánh rừng thông xanh mướt, tạo nên khung cảnh thơ mộng và yên bình.`,
+                address: 'Xã Thủy Bằng, Thành phố Huế, Thừa Thiên Huế'
+            },
+            {
+                title: 'Cầu Trường Tiền',
+                content: `Cầu Trường Tiền là cây cầu nổi tiếng nhất ở Huế, bắc qua sông Hương.
+                Cầu được xây dựng vào năm 1899 và hoàn thành vào năm 1904, là biểu tượng của thành phố Huế.
+                Cầu có kiến trúc độc đáo với 6 nhịp, mỗi nhịp dài 68m, tạo nên khung cảnh thơ mộng và lãng mạn.`,
+                address: 'Đường Lê Lợi - Trần Hưng Đạo, Thành phố Huế, Thừa Thiên Huế'
+            },
+            {
+                title: 'Chùa Thiên Mụ',
+                content: `Chùa Thiên Mụ là một trong những ngôi chùa cổ kính và nổi tiếng nhất ở Huế, nằm trên đồi Hà Khê bên bờ sông Hương.
+                Chùa được xây dựng vào năm 1601, là nơi thờ Phật và cũng là nơi lưu giữ nhiều di sản văn hóa quý giá.
+                Chùa có kiến trúc độc đáo với tháp Phước Duyên cao 21m, là biểu tượng của chùa Thiên Mụ.`,
+                address: 'Đường Nguyễn Phúc Nguyên, Phường Kim Long, Thành phố Huế, Thừa Thiên Huế'
+            }
         ];
+
+
         // Hàm cập nhật thông tin bản đồ khi click vào icon location
-        function updateMapInfo(title, content) {    
+        function updateMapInfo(title, content, address) {
             const mapTitle = document.querySelector('.map-title h2');
             const mapContent = document.querySelector('.map-info p');
-            if (mapTitle && mapContent) {
+            const mapAddress = document.querySelector('.map-address');
+            if (mapTitle && mapContent && mapAddress) {
                 mapTitle.textContent = title;
                 mapContent.textContent = content;
+                mapAddress.textContent = 'Địa chỉ: ' + (address || 'Đang cập nhật');
             }
         }
 
@@ -366,7 +382,7 @@
                 }
                 // Cập nhật info theo vị trí card
                 if (locationList[idx]) {
-                    updateMapInfo(locationList[idx].title, locationList[idx].content);
+                    updateMapInfo(locationList[idx].title, locationList[idx].content, locationList[idx].address);
                 }
                 e.stopPropagation();
                 const mapContainer = document.querySelector('.map-info');
