--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
                 <i class="fas fa-info icon-info"></i>
                 <!-- <i class="fas fa-image icon-images"></i> -->
             </div>
+            
             <div class="map-info">
                 <div class="map-title">
                     <h2>Đại Nội Huế</h2>
                     <div class="control-info">x</div>
                 </div>
-                <h4 class="map-address">Địa chỉ: 23-25 Lê Huân, Thuận Thành, Thành phố Huế, Thừa Thiên Huế</h4>
-                <p>Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
-                    Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
-                    Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
-                    Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.</p>
+                <div class="map-content">
+                    <h4 class="map-address">Địa chỉ: 23-25 Lê Huân, Thuận Thành, Thành phố Huế, Thừa Thiên Huế</h4>
+                    <p>Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
+                        Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
+                        Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
+                        Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.</p>
+                </div>
             </div>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.1548931774328!2d107.57659917583011!3d16.467692784271062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3141a133c94c1643%3A0x43fd52385dcfacbf!2zTmfhu40gTcO0bg!5e0!3m2!1svi!2s!4v1752400834073!5m2!1svi!2s"
@@ -147,7 +150,7 @@
                 </div>
                 <div class="fot-info">
                     <h2>Trung tâm Bảo tồn Di tích Cố đô Huế</h2>
-                    <h4>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h4>
+                    <h3>Phòng Festival Huế, Tổ chức sự kiện và Truyền thông</h3>
                     <div>
                         <i class="fas fa-map-marker-alt"></i>
                         <p>Địa chỉ: Tam Tòa, 33 Tống Duy Tân, phường Phú Xuân, thành phố Huế, Việt Nam</p>
