update thanh cuon + fix footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                     <p>Đại Nội Huế là quần thể kiến trúc cung đình của triều Nguyễn, nằm trong Kinh thành Huế.
                         Nơi đây từng là trung tâm chính trị, hành chính và lễ nghi của triều đình suốt hơn một thế kỷ.
                         Đại Nội gồm Hoàng thành và Tử Cấm Thành với nhiều công trình nguy nga, cổ kính.
-                        Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.</p>
+                        Di sản này được UNESCO công nhận là Di sản Văn hóa Thế giới từ năm 1993.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis laborum explicabo perspiciatis cumque neque atque veniam nostrum expedita eum soluta voluptatibus autem in magnam ipsum numquam doloremque rerum exercitationem!
+                    </p>
                 </div>
             </div>
             <iframe
